rearranging discussion and conclusion

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -254,59 +254,33 @@
 
 
     \paragraph{} 
-    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one component on another and vice versa. Several aspects of our model and its implementation allow us to better capture complex features of ecological communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks however, interactions in our model are estimated from species effects on each other's performance.  This method opens possibilities for many types of applications depending on the system chosen.
+    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one component on another and vice versa. Several aspects of our model and its implementation allow for the capture of complex features of interacting assemblages compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many nodes. Unlike co-occurrence networks however, interactions in our model are estimated from node effects on each other's performance.  
 
-
-    % % Move to end of Discussion? / Conclusion
-
-
-    % \paragraph{} % MAYBE? 
-    % Discuss the scaling and wide potential uses for it? 
-
- 
-    % \subsection{Applications to ecosystem management}
 
     \paragraph{}
-    Interaction networks provide a unique lens with which to examine an ecological community. By describing how species are linked, networks can for example be used to evaluate ecosystem response to human-altered landscapes and guide future management decisions \parencite{Ross2011} or explore how communities may respond to global warming \parencite{Gorman2019}. Specifically, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to individual species. This can direct ecosystem management efforts such as prioritising certain species to conserve, or eradicating invasives which are disruptful to native species community dynamics. 
-
-    [MERGE THE FOLLOWING 3 PARAGRAPHS]
+    Here, we illustrate the unique useful features of this framework in an ecological context. In our case study, we described how plant species are linked through plant-plant interactions. We then showed how this type of network can be used to understand the role of different species in the community, for example the effect of exotics on natives. Effectively, species interaction networks have a wide range of applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Moreover, couching species-rich interaction matrices into models of population dynamics allow us to compare how community dynamics may affect and respond to the presence of a specific species. This can direct ecosystem management efforts such as prioritising certain species to conserve, or in the case of invasives, which species to eradicate. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
 
     \paragraph{}
-    Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \parencite{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \parencite{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some species, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on all other neighbours (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
-    %     % Because some species have stronger effects on other species abundances and are more crucial to the maintenance of biodiversity, management efforts can be prioritised towards their conservation. 
-
-    %         \paragraph{} % MOVED FROM RESULTS
-    %         One potential use for translating interaction estimates into per-capita interaction strengths is to identify species of particular importance to the healthy functioning of the whole community. 
-
-
-         \paragraph{}
-     Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \parencite{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \parencite{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}) though further tests are recommended for validation. Foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. Identifying keystone, foundation and other important types of species roles is helpful for maintaining biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.
+    Certain species play important roles in the community which can be deduced from their position in the interaction network \parencite{Cirtwill2018a}. Identifying keystone, foundation and other important types of species roles is helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}.    Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species \parencite{Mills1993}, often leading to secondary extinctions when they are removed from a network. Their influence on the abundance of other species and wider community dynamics is disproportionately high compared to their biomass \parencite{Power1996, Piraino2002, Libralato2006}, which allows easy identification of potential keystone species from our network results (Fig. \ref{fig:species}.B) though further tests are recommended for validation. As another example, foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. 
     %     % [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.]
 
-    \paragraph{}
+    \paragraph{} % Keep as is
     Network approaches can also be used to evaluate how specific species are integrated within the community. Our case study for example illustrates how different exotic species can have widely varying competitive and facilitative effects on neighbours (Fig. \ref{fig:species}). Though many invasive species compete with natives \parencite{Naeem2000, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. Alternatively, threatened species could also benefit from this type of analysis. Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is one of many strategies which could help guide conservation management.
 
 
-    % \subsection{Understanding community diversity and stability}
-
-    %     \paragraph{}
-    %     Quantifying the matrix of per-capita interaction strengths between species in horizontal communities allows us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
+    \paragraph{}
+    Quantifying the matrix of per-capita interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
 
     %         \paragraph{} % MOVED FROM RESULTS
     % In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes our framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \parencite{Brooker2008a}.
 
-    %     \paragraph{}
-    %     A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003}. Recent work suggests facilitation may be more widespread than expected \parencite{Gross2015, Picoche2020} and can  benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
+        \paragraph{}
+        Another key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008a}. Recent work suggests facilitation may be more widespread than expected \parencite{Gross2015, Picoche2020} and can  benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
         
-    %     \paragraph{}
-    %     Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g. \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between plants. 
+        \paragraph{}
+        Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks networks (e.g. \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained between plants. Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
 
-        %Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
-
-     \paragraph{} [Moved over from Chapter 4]
- Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to integrate multi-trophic and horizontal approaches to understanding multispecies coexistence // the reality of species interactions and their dynamic effects on biodiversity and stability. [modify this paragraph to suit CH 3]
-
-
+     
     % \subsection{Future research directions}
 
     % - adding trait or phylogeny data, for example by informing priors with trait or phylogeny distance matrix
@@ -316,16 +290,20 @@
    \subsection{Limitations}
         
         \paragraph{}
-        Though our framework does provide a way of estimating interactions between system elements which are not observed to cooccur, care should be taken that these unrealised interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones, and the more reliable those observed estimates are. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing season never overlaps in the field. This type of interaction would be assigned a 0 value. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+        Our novel framework provides a versatile approach to estimating interactions between system elements which are not observed to cooccur. Care should be taken, however, that these unrealised interactions do not dominate resulting networks. The method we propose uses observed interactions to estimate unobserved interactions. This method thus works better the more observed interactions available and is thus not ideal for small or heavily fragmented dayasets. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing season never overlaps in the field. This type of interaction would be assigned a 0 value. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
         \paragraph{}
-        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial as we do not recommend fewer than 20 observations per focal species. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of interest however, data-collection can simply be focused on amassing observations of focal individuals from those rarer species to be able to estimate these interaction strengths.   
+        Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial as we do not recommend fewer than 20 observations per focal species. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate these interaction strengths.   
 
-\section{Conclusion}
+\subsection{Conclusion}
 
     \paragraph{} 
-     By providing a method whith which to estimate interactions in horizontal systems, we hope to help empiricists who would like to ...
+    There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. Though we illustrate our study with an ecological dataset, the method presented here can be adapted for use on a wider array of  horizontal systems such as those found in neural, social and economic networks. 
 
+%\paragraph{} 
+ %Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. 
+ % Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. 
+ % Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to integrate multi-trophic and horizontal approaches to understanding the reality of species interactions and their dynamic effects on biodiversity and stability. 
 
     
 \section{Methods}
