--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -119,7 +119,7 @@
 
     % 1 or 2 paragraphs explaining what we did (the 'method') applied to the data 
     \paragraph{}
-        To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological communities, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of an element - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring elements in a neighbour-density dependant model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements/species which were observed to co-occur. Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (e.g. linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. 
+        To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological communities, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual element performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of an element - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring elements in a neighbour-density dependant model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements/species which were observed to co-occur. Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (e.g. linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. 
 
     \paragraph{}
         Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are less likely to be found. These rarer species may still, however, potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to these unknown interactions, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we describe a model which assumes that unrealised interactions can be simplified such that elements typically have a singular impact on and a singular response to neighbours independant of neighbour identity (response and impact model, or RIM). An unrealised interaction is therefore the product of two elements' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the RIM applies only to those unrealised interactions. 
@@ -254,7 +254,7 @@
 
 
     \paragraph{} 
-    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one component on another and vice versa. Several aspects of our model and its implementation allow for the capture of complex features of interacting assemblages compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many nodes. Unlike co-occurrence networks however, interactions in our model are estimated from node effects on each other's performance.  
+    The framework presented here allows the estimation of diverse interaction matrices from horizontal community data. Given individual observations of performance and the identity of the local neighbourhood, our model uses Bayesian regression to quantify the competitive or facilitative effects of one element on another and vice versa. Several aspects of our model and its implementation allow for the capture of complex features of interacting assemblages compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many nodes. Unlike co-occurrence networks however, interactions in our model are estimated from node effects on each other's performance.  
 
 
     \paragraph{}
@@ -311,7 +311,7 @@
 %\textbf{Note: I've left the species / fitness nomenclature throughout and added a little sentence explaining why as I'm not sure that switching to elements/performance will make it any clearer - happy to take advice on which makes more sense though}
     
     \paragraph{}
-    The joint model framework was initially developed for an ecological dataset where interacting species affect each other's lifetime reproductive success. As such we refer to network elements or nodes as 'species' and node performance as 'lifetime reproductive success' or 'fitness' however this framework is not limited to ecological datasets and can be applied to data from interacting elements (e.g. populations or groups of individuals) which meet the following criteria. First,   observations of focal individuals must record a proxy for performance, for example seed production, biomass or stem diameter growth as a proxies for lifetime reproductive success. Second,  these observations must also record the identity and abundance of neighbours within the interaction neighbourhood of each focal individual. Lastly, observations should be spatially replicated across several individuals for each focal component or species.
+    The joint model framework was initially developed for an ecological dataset where interacting species affect each other's lifetime reproductive success. As such we refer to network elements or nodes as 'species' and node performance as 'lifetime reproductive success' or 'fitness' however this framework is not limited to ecological datasets and can be applied to data from interacting elements (e.g. populations or groups of individuals) which meet the following criteria. First,   observations of focal individuals must record a proxy for performance, for example seed production, biomass or stem diameter growth as a proxies for lifetime reproductive success. Second,  these observations must also record the identity and abundance of neighbours within the interaction neighbourhood of each focal individual. Lastly, observations should be spatially replicated across several individuals for each focal element or species.
 
 
     In addition to these requirements, any experimental design or data which may reduce confounding effects between environment and competition will provide more accurate estimates of interaction effects (e.g. thinning certain plots, recording environmental data known to affect performance). 
